# Enki

./: CMakeLists.txt  LICENSE  README.md
enki/: CMakeLists.txt  app.cpp  enki.cpp  main.cpp
enki/common/: service.hpp  thread_group.hpp
enki/renderer/: director.hpp  renderer.hpp
specs/: CMakeLists.txt  specs.h
specs/util/: util.h
